--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,19 @@
   <script src="bundle.js" async></script>
 </head>
 <body>
+  <div data-controller="clipboard">
+    PIN: <input data-target="clipboard.source" type="text" value="1234" readonly>
+    <button data-action="clipboard#copy" class="clipboard-button">Copy to Clipboard</button>
+  </div>
 
+  <div data-controller="slideshow" data-slideshow-index="1">
+  <button data-action="slideshow#previous">←</button>
+  <button data-action="slideshow#next">→</button>
+
+  <div data-target="slideshow.slide" class="slide">🐵</div>
+  <div data-target="slideshow.slide" class="slide">🙈</div>
+  <div data-target="slideshow.slide" class="slide">🙉</div>
+  <div data-target="slideshow.slide" class="slide">🙊</div>
+  </div>
 </body>
 </html>
