--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,7 @@
   <div data-target="slideshow.slide" class="slide">🙉</div>
   <div data-target="slideshow.slide" class="slide">🙊</div>
   </div>
+  <div data-controller="content-loader"
+     data-content-loader-url="/messages.html"></div>
 </body>
 </html>
