--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <div data-target="slideshow.slide" class="slide">🙊</div>
   </div>
   <div data-controller="content-loader"
-     data-content-loader-url="/messages.html"></div>
+     data-content-loader-url="/messages.html"
+     data-content-loader-refresh-interval="5000"></div>
 </body>
 </html>
